adding linting in system

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,5 @@ target-version = ["py313"]
 [tool.ruff]
 line-length = 88
 target-version = "py313"
-select = ["E", "F", "I", "B", "UP"]
+lint.select = ["E", "F", "I", "B", "UP"]
 exclude = ["tests/*"]
